ticketing/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth #we're telling the deployment to find the pods with label app: auth
  template: #this sets the template.
    metadata:
      labels:
        app: auth #For any pod the deployment is going to create it should have the label of app: auth
    spec: #This defines the specifications/configuration of the pod we want to create
      containers:
        - name: auth
          image: flairxy/auth #auto sets to the latest version
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
